adding rQ logic to mmix and a help file for the timer device
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@210 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/htdocs/index.html
+++ b/vmb/htdocs/index.html
@@ -20,6 +20,8 @@ and links to ready to run binary examples.
 <H2> Device Documentation </H2>
 <UL>
 <LI><A HREF="winvram_help.html">winvram - Framebuffer Device with Mouse and GPU</A>
+<LI><A HREF="timer_help.html">timer - Timer Device to generate interrupts
+and get the current time and date.</A>
 </UL>
 
 
