handling Ctrl C in mmix, adding a timed waut for event and making the powersave instruction of mmix last a maximum of 750 ms
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@214 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/timer/help.html
+++ b/vmb/src/timer/help.html
@@ -8,10 +8,10 @@
 <tr><th>Byte<th>Mode<th>Name<th>Description
 <tr><td>00-03<td>RW<td>n<td> number of milliseconds to wait
 <tr><td>04-07<td>R <td>y<td> current year
-<tr><td>08-09<td>R <td>m<td> current month
+<tr><td>08-09<td>R <td>m<td> current month (0 = January, 1 = February, ... , 11 = December)
 <tr><td>10   <td>R <td>d<td> current day
-<tr><td>11   <td>R <td>w<td> current day of the week
-<tr><td>12-15<td>R <td>t<td> time since midnight in ms
+<tr><td>11   <td>R <td>w<td> current day of the week (0=Sunday, 1 = Monday, ... , 6 = Saturday)
+<tr><td>12-15<td>R <td>t<td> local time since midnight in ms
 </table>
 
 
