--- a/vmb/src/timer/help.html
+++ b/vmb/src/timer/help.html
@@ -104,62 +104,7 @@ The timer has the following configurable parameters:
 </table>
 These should be set in default.mmc
 Later versions of the timer device might specify a resolution, to change
-the units of ms, t, i, t0 an dt. Currently, only a millisecond timer is available.
-
-<H1>OLD Timer Device Specification</H1>
-
-<H2>Memory Layout</H2>
-<p>
-<table border=1>
-<tr><th>Byte<th>Mode<th>Name<th>Description
-<tr><td>00-03<td>RW<td>n<td> number of milliseconds to wait
-<tr><td>04-07<td>R <td>y<td> current year
-<tr><td>08-09<td>R <td>m<td> current month (0 = January, 1 = February, ... , 11 = December)
-<tr><td>10   <td>R <td>d<td> current day
-<tr><td>11   <td>R <td>w<td> current day of the week (0=Sunday, 1 = Monday, ... , 6 = Saturday)
-<tr><td>12-15<td>R <td>t<td> local time since midnight in ms
-</table>
-
-
-<H2>Timer Interrupts</H2>
-The timer uses 4 Byte (one TETRA) at the configured address 
-to specify a timer interval n in
-milliseconds (1/1000 second).
-<p>
-If the timer interval is set to a value n, where n is not zero,
-the timer will wait n milliseconds and then send an interrupt
-with a configurable interrupt number. Then the timer will wait
-again and send further interrupts
-<p>
-If the timer interval is set while the timer is already waiting,
-the waiting period will start over from zero.
-<p>
-If the timer interval is set to zero, there will be no further
-interrupts.
-
-<H2>Current Time (Win32 version only)</H2>
-The values y, m, d, w, t specify the current time
-and date as given by the host operating system.
-These values are read only.
-
-<H2>Timer Configuration</H2>
-The timer has the following configurable parameters:
-<p>
-<table>
-<tr> <td>host      <td> localhost <td>the host where the bus is located </tr>
-<tr> <td>port      <td> 9002 <td> the port where the bus is located</tr>
-<tr> <td>address   <td> default <td> address where the resource is located </tr>
-<tr> <td>interrupt <td> default <td>interrupt send by device  </tr>
-<tr> <td> x        <td> 0<td>the x position of the window </tr>
-<tr> <td> y        <td> 0<td>the y position of the window </tr>
-<tr> <td> minimized<td> false<td>start with a minimized window </tr>
-<tr> <td> debug    <td> false<td>to generate debug output </tr>
-<tr> <td> verbose  <td> false<td>make debugging verbose </tr>
-<tr> <td> define   <td> not set<td>to define a name for conditionals</tr>
-<tr> <td> config   <td> not set<td>filename for a configuration file</tr>
-<tr> <td> help     <td> false<td>to print information</tr>
-</table>
-These should be set in default.mmc
+the units of ms, t, i, t0 and dt. Currently, only a millisecond timer is available.
 
 </BODY>
 </HTML>
