reviewing systematic the debug output statements changing the led order
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@253 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/htdocs/index.html
+++ b/vmb/htdocs/index.html
@@ -22,6 +22,7 @@ and links to ready to run binary examples.
 <LI><A HREF="winvram_help.html">winvram - Framebuffer Device with Mouse and GPU</A>
 <LI><A HREF="timer_help.html">timer - Timer Device to generate interrupts
 and get the current time and date.</A>
+<LI><A HREF="led_help.html">led - LEDs to turn on and off</A>
 </UL>
 
 
