--- a/vmb/src/timer/help.html
+++ b/vmb/src/timer/help.html
@@ -97,7 +97,8 @@ The timer has the following configurable parameters:
 <tr> <td> y        <td> 0<td>the y position of the window </tr>
 <tr> <td> minimized<td> false<td>start with a minimized window </tr>
 <tr> <td> debug    <td> false<td>to generate debug output </tr>
-<tr> <td> verbose  <td> false<td>make debugging verbose </tr>
+<tr> <td> debugmask <td> 0xFFF0 <td>set mask to hide debug output </tr>
+<tr> <td> verbose  <td> false<td>make debugging verbose, sets debug mask to zero </tr>
 <tr> <td> define   <td> not set<td>to define a name for conditionals</tr>
 <tr> <td> config   <td> not set<td>filename for a configuration file</tr>
 <tr> <td> help     <td> false<td>to print information</tr>
