--- a/vmb/src/winvram/help.html
+++ b/vmb/src/winvram/help.html
@@ -189,6 +189,8 @@ The win32 vram device has the following configurable parameters:
 <tr> <td>moveinterrupt <td> false <td>whether mouse movements produce interrupts</tr>
 <tr> <td>gpuinterrupt <td> 20 <td>interrupt send by the GPU  </tr>
 <tr> <td>debug    <td> false<td>to generate debug output </tr>
+<tr> <td>debugmask <td> 0xFFF0 <td>set mask to hide debug output </tr>
+<tr> <td>verbose  <td> false<td>make debugging verbose, sets debug mask to zero </tr>
 <tr> <td>width <td> 640 <td>visible width in pixel  </tr>
 <tr> <td>height <td>480 <td>visible height in pixel  </tr>
 <tr> <td>fwidth <td> 640 <td>frame width in pixel  </tr>
