fixing win32 part of timer
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@260 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/timer/help.html
+++ b/vmb/src/timer/help.html
@@ -2,7 +2,7 @@
 <BODY>
 <H1>New Timer Device Specification</H1>
 
-<H2>Memory Layout</H2>
+<H2><B><B>Memory Layout</B></B></H2>
 <p>
 <table border=1>
 <tr><th>Byte<th>Mode<th>Name<th>Description
