--- a/vmb/src/led/help.html
+++ b/vmb/src/led/help.html
@@ -1,6 +1,14 @@
 <HTML>
-<BODY>
+
+	<head>
+		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<title>VMB LED Device Specification</title>
+	</head>
+
+	<BODY>
 <H1>LED Device Specification</H1>
+		<h1><img src="led.gif" alt="" width="96" height="32" border="0"></h1>
+		
 
 The LED device offers just one byte of memory. Each bit of the byte corresponding to
 one of 8 LEDs: Led0 through Led7. Led0 corresponds to the least significant bit (0x01) and 
