--- a/vmb/htdocs/index.html
+++ b/vmb/htdocs/index.html
@@ -25,8 +25,10 @@ and links to ready to run binary examples.
 
 <H2> Device Documentation </H2>
 <UL>
-<LI><A HREF="winvram_help.html">winvram </A>- Framebuffer Device with Mouse and GPU
-<LI><A HREF="timer_help.html">timer</A> - Timer Device to generate interrupts and get the current time and date.
+<LI><a href="mother_help.html">mother</a> - the motherboard herself
+			<li><A HREF="winvram_help.html">winvram </A>- Framebuffer Device with Mouse and GPU
+
+			<LI><A HREF="timer_help.html">timer</A> - Timer Device to generate interrupts and get the current time and date.
 <LI><A HREF="led_help.html">led</A> - LEDs to turn on and off
 			<li><a href="button_help.html">button</a> - push button sending interrupts to the system
 			
@@ -34,118 +36,14 @@ and links to ready to run binary examples.
 			<li><a href="screen_help.html">screen</a> - serial output device to display characters
 			<li><a href="keyboard_help.html">keyboard</a> - serial input device to read characters from the keyboard or from a File
 			<li><a href="disk_help.html">disk</a> - hard disk controler to read and write blocks in a disk (image).
-		</UL>
-
-
-<H2> Examples </H2>
-
-<H3><A HREF="http://math.cs.hm.edu/vmb/example1">Example 1</A></H3>
-A simple configuration running under Linux consisting of
-<UL>
-<LI> Virtual Motherboard.
-<LI> MMIX CPU
-<LI> ROM, including the rom image and the MMIX source files for the image
-<LI> RAM
-<LI> Screen
-<LI> Keyboard
-<LI> A sample hello world program, written in MMIX assembler.
-<LI> The mmix assembler (mmixal) and a tool to produce a boot image
-     from an mmix object file (mmoboot).
-<LI> A README file.
-<LI> The configuration file (default.mmc).
-<LI> A tgz file containing all of the above.
-</UL>
-
-<H3><A HREF="http://math.cs.hm.edu/vmb/example2">Example 2</A></H3> 
-
-			<UL>
-				<LI> Virtual Motherboard.
-
-
-				<LI> MMIX CPU
-
-				<LI> ROM, including the rom image and the MMIX source files for the image
-
-				<LI> RAM
-
-				<LI> Two Framebuffer devices, one written in Java the other in C (for X11).
-
-				<LI> A sample program lorenz.mms diplaying a lorenz attractor.
-
-				<LI> The mmix assembler (mmixal) and a tool to produce a boot image
-     from an mmix object file (mmoboot).
-
-				<LI> A README file.
-
-				<LI> The configuration file (default.mmc).
-
-				<LI> A tgz file containing all of the above.
-
-			</ul>
 		
-			<H3><A HREF="http://math.cs.hm.edu/vmb/example3">Example 3</A></H3>
-The same as Example 1, but with executables for WIN32.
-(<A HREF="http://math.cs.hm.edu/vmb/example3/example3.jpg">screenshot</A>)
-				<H3><A HREF="http://math.cs.hm.edu/vmb/example4">Example 4</A></H3>
-The same as Example 2, but with executables for WIN32.
-					<H3><A HREF="http://math.cs.hm.edu/vmb/example5">Example 5</A></H3>
-This example demonstrates a simple embedded device, a stopwatch.
-There is no RAM (everything works in registers, no user program, just
-a program in ROM.
-						<p>
-The example uses the GNU toolchain under windows to build the system.
-
-
-						<UL>
-							<LI> start it by double-clicking the motherboard. You will get the
-motherboard, ROM (no RAM needed for this), a MMIX CPU in a console window,
-a black, a green, and a red button, a timer, and a seven-segment display.
-Arrange them on the screen as needed. At the first run all items are 
-located at position 0x0, but they remember new positions...
-
-							<LI> Power the system on using the power button on the motherboard.
-
-							<LI> Pressing the green button sends an interrupt and the CPU will 
-switch on the timer.
-
-							<LI>  A Timer interrupt will come every 1/10th of a second.
-
-							<LI> The CPU will update the display on receiving a timer interrupt.
-
-							<LI> Pressing the red button will stop up the timer.
-
-							<LI> Pressing the black button, will reset the counter to zero.
-
-						</UL>
-						<H3><A HREF="http://math.cs.hm.edu/vmb/example7">Example 7</A></H3>
-This example demonstrates the framebuffer device, buttons and timer.
-							<UL>
-								<LI> The program runs the "Game of Live"
-
-								<LI> start it by double-clicking the motherboard. You will get the
-motherboard, RAM, ROM, am MMIX CPU in a console window, a black, green, and
-red button, a timer, and a frame buffer device. Arrange them on the screen
-as needed. At the first run all items are located at position 0x0, but they
-remember new positions...
-
-								<LI> When power is on the CPU starts, and initializes the screen.
-
-								<LI> Pressing the green button sends an interrupt and the CPU will advance
-to the next generation.
-
-								<LI> Pressing the red button will set up the timer, to send interrupts,
-advancing to the next generation automatically.
-
-								<LI> Pressing the black button, will terminate the Game of Life program. And
-the CPU returns to the operating systems idle loop.
-
-								<LI> Press the rest button on the motherboard to start over.
-
-							</UL>
-							It should be possible to write a program that starts with zero
-counting the seconds and displaying the number of seconds elapsed on
-the seven segment display.
-							<H3><A HREF="http://math.cs.hm.edu/vmb/example-gnu.tgz">Example GNU</A></H3>
-		A complex example demonstrating the GNU toolchain with MMIX. A simple configuration running under Linux consisting of
+			<li><a href="ram_help.html">RAM</a> - from 1 Byte to 4 GByte RAM
+			<li><a href="rom_help.html">ROM</a> - Read only memory defined by an image file 
+			<li><a href="flash_help.html">FLASH</a> - Read/Write memory made persistent through an image file
+			<li><a href="mmix_help.html">mmix</a> - the MMIX CPU
+			<li><a href="gmmix_help.html">gmmix</a> - the MMIX CPU with an interface to the GNU debugger GDB
+		</UL>
+		<H2>Examples and Binaries</H2>
+		To avoid duplication of efforts, examples and binaries have moved to the <a href="html://mmix.cs.hm.edu">MMIX repository</a>.
 	</BODY>
 </HTML>
