--- a/vmb/htdocs/index.html
+++ b/vmb/htdocs/index.html
@@ -6,25 +6,22 @@
 	</head>
 
 	<BODY>
-<H1> The Virtual Motherboard Homepage</H1>
+<H1 align="center"> The Virtual Motherboard Homepage</H1>
+		<h1 align="center"><img src="vmb128.jpg" alt="" height="128" width="128" border="0"></h1>
+		
 
 The Virtual Motherboard is hosted under sourceforge
 (see: <A HREF="http://sourceforge.net/projects/vmb/">
 http://sourceforge.net/projects/vmb/</A>). There you can get
 source code and browse the CVS repository.
-<p>
+
+		<p>
 Here you find documents, specifications for individual devices
 and links to ready to run binary examples.
 
-<H2> General Documentation </H2>
-<UL>
-<LI> <A HREF=messages.html>message specification</A>
-<LI> <A HREF=cache.html>cache specification</A>
 
-</UL>
-
-<H2> Device Documentation </H2>
-<UL>
+		<H2> Device Documentation </H2>
+		<UL>
 <LI><a href="mother_help.html">mother</a> - the motherboard herself
 			<li><A HREF="winvram_help.html">winvram </A>- Framebuffer Device with Mouse and GPU
 
@@ -43,7 +40,13 @@ and links to ready to run binary examples.
 			<li><a href="mmix_help.html">mmix</a> - the MMIX CPU
 
 		</UL>
-		<H2>Examples and Binaries</H2>
+		<h2>General Documentation</h2>
+		<ul>
+			<li><a href=messages.html>message specification</a>
+			<li><a href=cache.html>cache specification</a>
+		</ul>
+		<h2>Examples and Binaries</h2>
+		
 		To avoid duplication of efforts, examples and binaries have moved to the <a href="html://mmix.cs.hm.edu">MMIX repository</a>.
 	</BODY>
 </HTML>
