--- a/vmb/htdocs/index.html
+++ b/vmb/htdocs/index.html
@@ -42,10 +42,26 @@ and links to ready to run binary examples.
 		</UL>
 		<h2>General Documentation</h2>
 		<ul>
-			<li><a href=messages.html>message specification</a>
-			<li><a href=cache.html>cache specification</a>
+			<li><a href="configuration.html">Configuration Files</a>
+			<li><a href=messages.html>Message Specification</a>
+			<li><a href=cache.html>Cache Specification</a>
+		</ul>
+		<h2>Installation</h2>
+		<div align="left">
+			<ul>
+				<li>Windows<br>
+					Currently, the simplest way to install the VMB devices is available for Windows users. <br>
+					Download the <strong><a href="setup.exe">setup.exe</a></strong> file, double click it, and you are done. <br>
+					If all goes well, it will start a simple configuration: from the file readme.vmb: a screen, a keyboard, a MMIX  CPU, a ROM, and a ROM&nbsp;image. The keyboard will initialy take input from the file readme.txt. The CPU will take instructions from ROM, and these will take input from the keyboard and send it to the screen. So you should see the readme file.
+			</ul>
+		</div>
+		<ul>
+			<li>Linux<br>
+				Linux users have to compile the devices from sources obtained from cvs  (see: <A HREF="http://sourceforge.net/projects/vmb/">
+http://sourceforge.net/projects/vmb/</A>). The sources come with Makefiles. If you have make and gcc, just execute make in the top source directory.
 		</ul>
 		<h2>Examples and Binaries</h2>
+		
 		
 		To avoid duplication of efforts, examples and binaries have moved to the <a href="html://mmix.cs.hm.edu">MMIX repository</a>.
 	</BODY>
